--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <main>
         <div class="hero">
-            <img src="/assets/img/mileva.avif" class="mileva" loading="lazy" />
+            <img src="/assets/img/mileva.avif" class="accceuil" loading="lazy" />
         </div>
         <section class="introduction">
             <h1 class="title">Mileva Einstein</h1>
